Changing movies routes from /movies to /movie since it seems more intuitive.
